@@ -1,3 +1,8 @@
+Wed Oct 14 17:30:26 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* include/ruby/intern.h, dir.c, file.c, io.c (rb_str_encode_ospath):
+	  renamed from rb_str_conv_for_path().
+
 Wed Oct 14 17:17:25 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* dir.c, file.c: define wrapper macros by the original function name
